# rsomics-combine-pvalues

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: combine_pvalues.rs
src/: cli.rs  combine.rs  igam.rs  lib.rs  ndtr.rs  stdtr.rs  sum.rs
tests/: compat.rs
tests/golden/: degenerate.tsv  degenerate_nan.tsv  degenerate_one.tsv  expected.json  large.tsv  large_weights.tsv  mid.tsv  mid_weights.tsv  oor_gt1.tsv  oor_neg.tsv  small.tsv
